--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,10 @@
             socket.auth.serverOffset = serverOffset;
         })
 
+        socket.on("hola",(msg)=>{
+            console.log(msg)
+        })
+
     </script>
 </body>
 
